--- a/home.html
+++ b/home.html
@@ -151,5 +151,17 @@
      <p><h1 class="EMail" style="color: aqua;">Email: malamayupa7840e@gmail.com</h1></p>
     </div>
   </div>
-  </body>
+ <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7865882395867479"
+     crossorigin="anonymous"></script>
+<!-- all ads here -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7865882395867479"
+     data-ad-slot="8220234781"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</body>
 </html>
