--- a/home.html
+++ b/home.html
@@ -66,6 +66,17 @@
    <h1 class="N"></h1>
    <div class="cards">
      <div class="card1">
+         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7865882395867479"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-5m+cr+5o-dm-40"
+     data-ad-client="ca-pub-7865882395867479"
+     data-ad-slot="1764822862"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
        <img src="bunnyGame.png" width="330px" height="200px">
        <h2 class="classisForH2">20 INR</h2>
        <h2 class="card1H2">Kangaroo in the jungle game</h2>
