--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
         </div>
     </div>
         
-       <div class="gameLink">
+       <div id="gameLink" class="gameLink">
       <center><h5>Link For Play:</h5></center>
       <a href="https://armanalam92.github.io/project-13/index.html">FeedBunnyGame</a>
       <a href="https://armanalam92.github.io/project33/index.html">StickmanArcherGame</a>
@@ -94,7 +94,7 @@
          and also it will pass your time and you can play this game in pc only and it's not for 
          mobile this is not a mobile game i liked as well..
        </p>
-       <a class="Shref" href="">BUY NOW</a>
+       <a class="Shref" href="#gameLink">BUY NOW</a>
      </div>
 
 
@@ -120,7 +120,7 @@
         and also it will pass your time and you can play this game in pc only and it's not for 
         mobile this is not a mobile game i liked as well..
       </p>
-      <a class="Shref" href="">BUY NOW</a>
+      <a class="Shref" href="#gameLink">BUY NOW</a>
      </div>
 
      <div class="card3">
@@ -132,7 +132,7 @@
         and also it will pass your time and you can play this game in pc only and it's not for 
         mobile this is not a mobile game i liked as well..
        </p>
-       <a class="Shref" href="">BUY NOW</a>
+       <a class="Shref" href="#gameLink">BUY NOW</a>
      </div>
    </div>
    <div class="cards">
@@ -145,7 +145,7 @@
         and also it will pass your time and you can play this game in pc only and it's not for 
         mobile this is not a mobile game i liked as well..
        </p>
-       <a class="Shref" href="">BUY NOW</a>
+       <a class="Shref" href="#gameLink">BUY NOW</a>
      </div>
      <div class="card4">
       <img src="fruitCatcherGame.png" width="330px" height="200px">
@@ -156,7 +156,7 @@
         and also it will pass your time and you can play this game in pc only and it's not for 
         mobile this is not a mobile game i liked as well..
        </p>
-       <a class="Shref" href="">BUY NOW</a>
+       <a class="Shref" href="#gameLink">BUY NOW</a>
      </div>
     </div>
    <h1 class="allEnd"></h1>
