--- a/home.html
+++ b/home.html
@@ -230,5 +230,12 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+<div class="bottomNav">
+    <h1 style="height: 200px; background-color: darkolivegreen; border: 1.5px solid green;">
+        <center><h4>created with love and code
+        <h2>Email: malamayupa7840e@gmail.com</h2>  
+        <h2>Phone Number: +91 8588854433</h2></h4></center>
+    </h1>
+</div>
 </body>
 </html>
