--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
     <div class="navbar">
         <div class="nav">
             <ul>
-                <a style="transition-delay: 1s;" href="#landing">Home</a><a href="#cards">Projects</a><a href="#">Videos</a><a href="#ganda">About Us</a>
+                <a style="transition-delay: 1s;" href="#landing">Home</a><a href="#cards">Projects</a><a href="#">Videos</a><a href="#Videos">Videos</a><a href="#ganda">About Us</a>
             </ul>
         </div>
     </div>
