--- a/home.html
+++ b/home.html
@@ -191,6 +191,39 @@
      you can not play my games on mobile you can buy and play them all this is in cheap price and you no need to 
      download the games you can simply buy and fill the form and we will send you a playable game links
    </p>
+          <div id="Videos">
+    <div class="cardVideo">
+      <div class="card4">
+        <img src="Video1.jpg" width="330px" height="200px">
+        <h2 style="color: #fff;" class="classisForH2">Full HTML and CSS Tutorial</h2>
+         <h2 style="color: #fff;" class="card3H2">Full Programming Tutorials For Begginer</h2>
+         <p style="color: #fff;">
+          hi here is my Video and this is so simple to learn this things
+        </p>
+         <a class="Shref" href="https://www.youtube.com/watch?v=2YlxBwWx28Q">Watch NOW</a>
+       </div>
+    
+       <div class="card4">
+        <img src="Video2.jpg" width="340px" height="200px">
+        <h2 style="color: #fff;" class="classisForH2">Full Javascript Game Tutorial</h2>
+         <h2 style="color: #fff;" class="card3H2">Full Programming Tutorials For Begginer</h2>
+         <p style="color: #fff;">
+          hi here is my Video and this is so simple to learn this things
+        </p>
+         <a class="Shref" href="https://www.youtube.com/watch?v=loj_epbN0fQ">Watch NOW</a>
+       </div>
+     
+       <div class="card4">
+        <img src="Video3.jpg" width="340px" height="200px">
+        <h2 style="color: #fff;" class="classisForH2">Full portfolio Design Tutorial</h2>
+         <h2 style="color: #fff;" class="card3H2">Full Programming Tutorials For Begginer</h2>
+         <p style="color: #fff;">
+          hi here is my Video and this is so simple to learn this things
+        </p>
+         <a class="Shref" href="https://www.youtube.com/watch?v=NQYiq0mHcjs">Watch NOW</a>
+       </div>
+      </div>
+  </div>
   </center>
    <center><h1 id="ganda" class="ganda">About Me:</h1></center>
    <div class="ddd">
