--- a/home.html
+++ b/home.html
@@ -3,6 +3,9 @@
 <head>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7865882395867479"
      crossorigin="anonymous"></script>
+     <script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +14,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+     <amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-7865882395867479">
+</amp-auto-ads>
     <amp-ad width="100vw" height="320"
      type="adsense"
      data-ad-client="ca-pub-7865882395867479"
