--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
     <div class="navbar">
         <div class="nav">
             <ul>
-                <a style="transition-delay: 1s;" href="#landing">Home</a><a href="#cards">Projects</a><a href="#">Videos</a><a href="#Videos">Videos</a><a href="#ganda">About Us</a>
+                <a style="transition-delay: 1s;" href="#landing">Home</a><a href="#cards">Projects</a><a href="#bottomNav">Contact Us</a><a href="#Videos">Videos</a><a href="#ganda">About Us</a>
             </ul>
         </div>
     </div>
@@ -265,7 +265,7 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-<div class="bottomNav">
+<div class="bottomNav" id="bottomNav">
     <h1 style="height: 200px; background-color: darkolivegreen; border: 1.5px solid green;">
         <center><h4>created with love and code
         <h2>Email: malamayupa7840e@gmail.com</h2>  
